new kanban layout

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,7 @@
     "chartjs-plugin-datalabels": "^2.1.0",
     "compressorjs": "^1.2.1",
     "context": "^4.0.0",
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.30.0",
     "emoji-mart": "^3.0.0",
     "emoji-regex": "^10.3.0",
     "file-saver": "^2.0.5",
@@ -49,6 +49,7 @@
     "markdown-to-jsx": "^7.1.0",
     "material-ui-color": "^1.2.0",
     "material-ui-popup-state": "^4.1.0",
+    "materialui-daterange-picker": "^1.1.92",
     "mic-recorder-to-mp3": "^2.2.2",
     "moment": "^2.29.4",
     "path-browserify": "^1.0.1",
@@ -67,6 +68,7 @@
     "react-facebook-login": "^4.1.1",
     "react-favicon": "2.0.3",
     "react-flow-renderer": "^10.3.17",
+    "react-helmet": "^6.1.0",
     "react-html5-camera-photo": "^1.5.11",
     "react-i18next": "^15.4.1",
     "react-icons": "^4.7.1",
