--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,10 @@
     "build": "tsc",
     "watch": "tsc -w",
     "start": "nodemon dist/server.js",
-    "dev": "node ./scripts/check_and_kill_port.js && nodemon --exec ts-node src/server.ts",
+    "start:prod": "node dist/server.js",
+    "start:prod:migrate": "sh ./scripts/auto-migrate.sh",
+    "dev": "node ./scripts/check_and_kill_port.js && npm run build && npx sequelize db:migrate && nodemon --exec ts-node src/server.ts",
+    "dev:fast": "node ./scripts/check_and_kill_port.js && nodemon --exec ts-node src/server.ts",
     "dev:server": "ts-node-dev --respawn --transpile-only --ignore node_modules src/server.ts",
     "db:migrate": "npx sequelize db:migrate",
     "db:migrate:prod": "sequelize db:migrate",
