ci(backend): enable workflow_dispatch for manual runs of Docker build

--- a/.github/workflows/docker-backend2.yml
+++ b/.github/workflows/docker-backend2.yml
@@ -3,6 +3,7 @@ name: Build and Push Backend Docker image
 on:
   push:
     branches: [ main ]  # ou o branch que quiser monitorar
+  workflow_dispatch:
 
 jobs:
   build:
