build(backend): use Node 20 base images (baileys requires Node >=20); keep toolchain & npm fallback

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18-bullseye AS build
+FROM node:20-bullseye AS build
 WORKDIR /app
 ENV NODE_ENV=development
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
@@ -11,17 +11,26 @@ COPY package*.json ./
 
 # Toolchain para dependências nativas (mysql2/pg/node-gyp, etc.)
 RUN apt-get update \
-  && apt-get install -y --no-install-recommends python3 python-is-python3 build-essential pkg-config libssl-dev \
+  && apt-get install -y --no-install-recommends \
+       python3 python-is-python3 python3-dev python3-distutils \
+       build-essential pkg-config libssl-dev git ca-certificates \
   && rm -rf /var/lib/apt/lists/*
 
 # Instala dependências baseadas no package-lock (mais reprodutível) com diagnóstico detalhado e fallback
 RUN set -eux; \
+  node -v; npm -v; \
+  npm config set python /usr/bin/python3; \
+  npm config set fund false; \
+  npm config set audit false; \
+  npm config set jobs 1; \
+  npm config set fetch-retries 5; \
+  npm config set fetch-timeout 120000; \
   npm ci --legacy-peer-deps --no-audit --no-fund --loglevel=verbose \
-  || npm install --legacy-peer-deps --no-audit --no-fund --loglevel=verbose \
+  || npm install --legacy-peer-deps --no-audit --no-fund --no-optional --loglevel=verbose \
   || { \
     echo 'npm install failed, dumping npm logs'; \
     ls -lah /root/.npm/_logs || true; \
-    for f in /root/.npm/_logs/*; do echo "==== $f ===="; tail -n 200 "$f" || true; done; \
+    for f in /root/.npm/_logs/*; do echo "==== $f ===="; sed -n '1,200p' "$f" || true; echo '---- tail ----'; tail -n 200 "$f" || true; done; \
     exit 1; \
   }
 
@@ -36,7 +45,7 @@ RUN npm prune --omit=dev \
   && npm cache clean --force
 
 # --- Runtime ---
-FROM node:18-bullseye-slim AS runner
+FROM node:20-bullseye-slim AS runner
 WORKDIR /app
 ENV NODE_ENV=production
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
