--- a/backend/package.json
+++ b/backend/package.json
@@ -90,6 +90,7 @@
     "pino": "^7.8.0",
     "pino-pretty": "^10.0.0",
     "puppeteer": "^19.4.0",
+    "qrcode": "^1.5.3",
     "puppeteer-core": "^22.13.1",
     "qrcode-terminal": "^0.12.0",
     "reflect-metadata": "^0.1.13",
