--- a/.github/workflows/docker-frontend2.yml
+++ b/.github/workflows/docker-frontend2.yml
@@ -12,6 +12,13 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v2
 
+      - name: Read frontend version
+        id: pkg
+        run: |
+          echo "Reading frontend/package.json version..."
+          VER=$(node -p -e "require('./frontend/package.json').version")
+          echo "version=$VER" >> $GITHUB_OUTPUT
+
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
@@ -23,4 +30,9 @@ jobs:
         with:
           context: ./frontend
           push: true
-          tags: felipergrosa/whaticket-frontend:latest
+          build-args: |
+            REACT_APP_FRONTEND_VERSION=${{ steps.pkg.outputs.version || '' }}
+          tags: |
+            felipergrosa/whaticket-frontend:latest
+            felipergrosa/whaticket-frontend:${{ github.sha }}
+            felipergrosa/whaticket-frontend:v${{ steps.pkg.outputs.version }}
