--- a/backend/.env
+++ b/backend/.env
@@ -16,3 +16,10 @@ SESSIONS_DIR=private/sessions
 # Socket debug/fallback (DEV)
 SOCKET_DEBUG=true
 SOCKET_FALLBACK_NS_BROADCAST=true
+
+# Configurações de validação WhatsApp (REVERTIDO AO ORIGINAL)
+CONTACT_FILTER_ASYNC_VALIDATION=false
+CONTACT_VALIDATION_BATCH_SIZE=50
+CONTACT_FILTER_DIRECT_SQL=false
+CONTACT_FILTER_VALIDATE_WHATSAPP=true
+CONTACT_FILTER_INSERT_CHUNK_SIZE=1000
