chore/ui: corrigir warnings do Badge, ajustar prompt PWA e drawer
- força overlap='rectangular' e atualiza estilos do Badge
- implementa diálogo explicativo do PWA com cache por sessão/dia
- remove fechamento automático do menu lateral e melhora UXrigir warnings do Badge, ajustar prompt PWA e drawer

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -102,7 +102,7 @@
     "zustand": "^4.4.1"
   },
   "scripts": {
-    "start": "node ./scripts/check_and_kill_port.js && craco start",
+    "start": "node ./scripts/check_and_kill_port.js && node ./scripts/start-dev.js",
     "build": "set NODE_OPTIONS=--max-old-space-size=6144&& craco build",
     "test": "craco test"
   },
