--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,13 +9,21 @@ RUN npm install --legacy-peer-deps
 # Copia o restante dos arquivos
 COPY . .
 
-# Defina a URL do backend aqui!
-# Troque pelo seu domínio público do backend (ou use ARG se quiser mais flexibilidade)
-ENV REACT_APP_BACKEND_URL=https://chatsapi.nobreluminarias.com.br
+# Argumentos configuráveis no build (com defaults seguros para desenvolvimento)
+ARG REACT_APP_BACKEND_URL=http://localhost:8080
+ARG REACT_APP_SOCKET_URL=http://localhost:8080
+ARG REACT_APP_PRIMARY_COLOR=#2563EB
+ARG REACT_APP_PRIMARY_DARK=#1E3A8A
+ARG PUBLIC_URL=http://localhost:3000
+ARG REACT_APP_FRONTEND_VERSION=dev
 
-# Versão do frontend injetada no build (vinda do CI)
-ARG REACT_APP_FRONTEND_VERSION
-ENV REACT_APP_FRONTEND_VERSION=$REACT_APP_FRONTEND_VERSION
+# Exporta para o ambiente de build (CRA lê REACT_APP_*)
+ENV REACT_APP_BACKEND_URL=${REACT_APP_BACKEND_URL}
+ENV REACT_APP_SOCKET_URL=${REACT_APP_SOCKET_URL}
+ENV REACT_APP_PRIMARY_COLOR=${REACT_APP_PRIMARY_COLOR}
+ENV REACT_APP_PRIMARY_DARK=${REACT_APP_PRIMARY_DARK}
+ENV PUBLIC_URL=${PUBLIC_URL}
+ENV REACT_APP_FRONTEND_VERSION=${REACT_APP_FRONTEND_VERSION}
 
 # Build da aplicação React
 RUN NODE_OPTIONS=--max-old-space-size=6144 npm run build
