--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
       DB_USER: postgres         # usuário padrão, ajuste conforme sua configuração
       DB_PASS: efe487b6a861100fb704ad9f5c160cb8 # senha igual à do seu banco
       TZ: America/Sao_Paulo
-      FRONTEND_URL: http://localhost
-      BACKEND_URL: http://localhost:8080
+      FRONTEND_URL: ${FRONTEND_URL:-https://chats.nobreluminarias.com.br}
+      BACKEND_URL: ${BACKEND_URL:-https://chats.nobreluminarias.com.br}
       REDIS_URI: redis://redis:6379/0
       REDIS_URI_ACK: redis://redis:6379/0
       BULL_USER: admin
@@ -34,6 +34,9 @@ services:
       CONTACT_FILTER_DIRECT_SQL: "false"
       CONTACT_FILTER_VALIDATE_WHATSAPP: "true"
       CONTACT_FILTER_INSERT_CHUNK_SIZE: "1000"
+      # WhatsApp Business API (Meta) - Configurações Globais
+      WABA_WEBHOOK_VERIFY_TOKEN: ${WABA_WEBHOOK_VERIFY_TOKEN:-602536nblumi2025}
+      WABA_API_VERSION: ${WABA_API_VERSION:-v18.0}
     networks:
       - nobreluminarias
     ports:
