fix(frontend): corrige estilização Tailwind CSS e resolve memory leaks
- Corrige configuração PostCSS/Tailwind para processar CSS corretamente
- Remove memory leaks no hook useAuth
- Corrige DOM nesting na página Tags
- Implementa logger utilitário para desenvolvimento/produção
- Remove console.logs desnecessários
- Corrige tipos TypeScript (propriedade super no Express)
- Organiza documentação WhatsApp API Oficial em estrutura .docs/
- Limpa arquivos temporários e atualiza .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -145,6 +145,11 @@ restore-list-staged.txt
 restore-list-unstaged.txt
 restore-list-vs-origin.txt
 
+# Ignora arquivos temporários de build e commit
+build_date.txt
+commit.txt
+commit-msg.txt
+
 # Não ignore arquivos importantes do código
 !backend/**/src/**
 !frontend/**/src/**
