--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
       DB_USER: postgres         # usuário padrão, ajuste conforme sua configuração
       DB_PASS: efe487b6a861100fb704ad9f5c160cb8 # senha igual à do seu banco
       TZ: America/Sao_Paulo
-      FRONTEND_URL: ${FRONTEND_URL:-https://chats.nobreluminarias.com.br}
-      BACKEND_URL: ${BACKEND_URL:-https://chats.nobreluminarias.com.br}
+      FRONTEND_URL: ${FRONTEND_URL:-https://taktchat.alivesolucoes.com.br}
+      BACKEND_URL: ${BACKEND_URL:-https://taktchat-api.alivesolucoes.com.br}
       REDIS_URI: redis://redis:6379/0
       REDIS_URI_ACK: redis://redis:6379/0
       BULL_USER: admin
