fix(whatsapp): um contato e um ticket por conversa (fromMe + @lid)
- Em mensagens fromMe (resposta pelo celular), Baileys envia remoteJid
  como xxx@lid (LID). Evitar tratar @lid como phone-like e criar
  contato/ticket duplicados.
- verifyContact: isPhoneLike exclui @lid; 1:1 @lid só busca por
  remoteJid, retorna null se não houver.
- resolveContactFromRecentLidTicket: usa ticket 1:1 (open/pending)
  mais recente para associar fromMe @lid à mesma conversa.
- handleMessage: se fromMe + @lid e contact null, resolve via helper;
  se não houver ticket recente, ignora mensagem (log).
- Fase 5: auditContacts (db:audit-contacts), dedupe-contacts
  (db:dedupe-contacts); docs em duplicidades.md.
- CreateCompanyService: cria fila "Padrão" ao cadastrar empresa.
- ListTicketsService: inclui queueId null em filtros.

--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,10 @@
     "type:comprehensive": "ts-node src/utils/comprehensive-type-check.ts",
     "auth:comprehensive": "ts-node src/utils/comprehensive-auth-diagnostic.ts",
     "auth:compatibility": "ts-node src/utils/auth-compatibility-check.ts",
-    "media:migrate": "ts-node src/utils/migrateLegacyMedia.ts"
+    "media:migrate": "ts-node src/utils/migrateLegacyMedia.ts",
+    "db:delete-company1": "ts-node src/database/scripts/deleteCompany1Data.ts",
+    "db:audit-contacts": "ts-node src/database/scripts/auditContacts.ts",
+    "db:dedupe-contacts": "ts-node src/scripts/dedupeContacts.ts"
   },
   "license": "MIT",
   "dependencies": {
